--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://StdentGuide.github.io" # The base hostname & protocol for your sit
 
 # Build settings
 markdown: kramdown
-theme: minima # A simple, clean Jekyll theme that comes pre-installed on GitHub Pages.
+theme: minimal # A simple, clean Jekyll theme that comes pre-installed on GitHub Pages.
 plugins:
   - jekyll-feed
 
