--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # _config.yml
 
 # Site Settings
-title: reComputer J30/40 Setup Guide
-description: Getting started and configuring the Seeed Studio reComputer J30/40 for Edge AI deployment.
+title: Some Guide and Resources
 baseurl: "" # The subpath of your site, e.g. /blog.
 url: "https://itshaihong.github.io/StudentGuide" # The base hostname & protocol for your site
 
