--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@
 
 main:
   - title: reComputer Setup
-    url: /
+    url: /StudentGuide/
   - title: Satcat.com Guide
-    url: /satcat-guide/
+    url: /StudentGuide/satcat-guide/
